<resources>
    <string name="app_name">Hasten</string>
    <string name="text_phone">Enter your phone number</string>
    <string name="info_phone">Please confirm your country code and enter your phone number.</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_country">CC</string>
    <string name="text_verify">Verify now</string>
    <string name="text_code">Your verification code</string>
    <string name="info_code">Enter the verification code we\'ve sent to: </string>
    <string name="text_continue">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="edit_profile">Edit your profile</string>
    <string name="bio">Add a bio</string>
    <string name="info_bio">Add a few lines about yourself. [Optional]</string>
    <string name="info_username">How the others will find you. [Optional]</string>
    <string name="username">Username</string>
    <string name="info_name">What should people call you? [Required]</string>
    <string name="name">Your name</string>
    <string name="select_photo">Select Photo</string>
    <string name="search">Search</string>
    <string name="message">Message</string>
    <string name="create_group">Create group</string>
    <string name="presence_now">last seen just now</string>
    <string name="presence_long">last seen a long time ago</string>
    <string name="presence_month">last seen within a month</string>
    <string name="presence_week">last seen within a week</string>
    <string name="presence_hour">last seen within a hour</string>
    <string name="presence_minute">last seen within a minute</string>
</resources>