<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="?android:colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textSize="18sp"
            android:textColor="?attr/colorOnPrimary"
            android:fontFamily="@font/medium"
            android:gravity="center"
            android:padding="8dp"
            android:layout_marginBottom="15dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="360dp">

            <ImageView
                android:id="@+id/ic_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/text_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="?attr/colorPrimary"/>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/text_select_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/select_photo"
            android:textColor="@color/white"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="15dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/textInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:layout_marginTop="15dp"
                    app:helperText="@string/info_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorOnPrimary"
                        android:padding="15dp"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/textInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:layout_marginTop="15dp"
                    app:helperText="@string/info_username">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorOnPrimary"
                        android:padding="15dp"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/textInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bio"
                    android:layout_marginTop="15dp"
                    app:helperText="@string/info_bio">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_bio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:textColor="?attr/colorOnPrimary" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/text_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_continue"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:layout_gravity="center|bottom"/>
</LinearLayout>